compiler-skeleton/tests/parse-error/parse_assign.ln
a:int;

a=b=a=b=b;

a=0.1;

a=9223372036854775808;

